--- a/source/com.sap.sample.boe.services/.classpath
+++ b/source/com.sap.sample.boe.services/.classpath
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="var" path="BOE_HOME/java/lib"/>
-	<classpathentry exported="true" kind="var" path="BOE_HOME/java/lib/log4j.jar"/>
+	<classpathentry kind="var" path="BOE_HOME/java/lib/external/log4j.jar"/>
 	<classpathentry exported="true" kind="var" path="BOE_HOME/java/lib/logging.jar"/>
 	<classpathentry exported="true" kind="var" path="BOE_HOME/java/lib/json.jar"/>
-	<classpathentry exported="true" kind="var" path="BOE_HOME/java/lib/external/commons-lang-2.1.jar"/>
+	<classpathentry kind="var" path="BOE_HOME/java/lib/commons-lang-2.3.jar"/>
 	<classpathentry exported="true" kind="var" path="BOE_HOME/java/lib/cecore.jar"/>
 	<classpathentry exported="true" kind="var" path="BOE_HOME/java/lib/celib.jar"/>
 	<classpathentry exported="true" kind="var" path="BOE_HOME/java/lib/ceplugins_core.jar"/>
